loop through all mixture models if residue atom group not specified